[package]
name = "atomic_hooks"
version = "0.1.6"
authors = ["rebo"]
edition = "2018"
description = "Atomic Reative State and Local State Hooks"
license = "Apache-2.0 OR MIT"

[dependencies]
slotmap = "0.4.0"
anymap = "0.12.1" 
illicit = "1.1.0"
typemap = "0.3.3"
atomic_hooks_macros = { path = "./macro" }

# topo = "=0.13.0"
# topo = { path = "../../moxie/topo" }
topo = { git = "https://github.com/MartinKavik/moxie", package = "topo", branch = "simple-mutex" }
