[package]
name = "atomic_hooks"
version = "0.1.6"
authors = ["rebo"]
edition = "2018"
description = "Atomic Reative State and Local State Hooks"
license = "Apache-2.0 OR MIT"

[dependencies]
slotmap = "^1.0.6"
anymap = "^0.12.1"
illicit = "^1.1.2"
typemap = "^0.3.3"
atomic_hooks_macros = { path = "./macro" }

topo = { version = "^0.13.2", features = ["wasm-bindgen"] }
# topo = { path = "../../moxie/topo" }
