[package]

name = "seed_hooks"
version = "0.1.5"
authors = ["rebo <rebotfc@gmail.com>"]
edition = "2018"
description = "Local state for Seed web apps"
license = "Apache-2.0 OR MIT"

[dependencies]
seed = "^0.8.0"
atomic_hooks = { path = "../atomic_hooks" }
gloo-timers = { version = "0.2.1", features = ["futures"] }
lazy_static = "^1.4.0"
wasm-bindgen = "^0.2.76"
derive_more = "^0.99.16"

[dev-dependencies]
wasm-bindgen-test = "^0.3.26"

[dependencies.web-sys]
version = "^0.3.53"
features = [
  'HtmlElement',
  "HtmlDocument",
  "HtmlCollection",
  "HtmlStyleElement",
]

