[package]
name = "seed_styles"
version = "0.1.9"
authors = ["rebo"]
edition = "2018"
description = "CSS Styling for Seed web apps"
license = "Apache-2.0 OR MIT"

[dependencies]
harsh = "^0.2.1"
seed_style_macros = { path = "./seed_style_macros" }
wasm-bindgen = "^0.2.76"
ordered-float = "^2.8.0"
anymap = "^0.12.1"
derive_more = "^0.99.16"
seed = "^0.8.0"
seed_hooks = { path = "../seed_hooks" }
objekt-clonable = "^0.2.2"
eager = "^0.1.0"
rust-hsluv = "^0.1.4"

[dev-dependencies]
wasm-bindgen-test = "^0.3.26"

[dependencies.web-sys]
version = "^0.3.53"
features = [
  'HtmlElement',
  "HtmlDocument",
  "HtmlCollection",
  "StyleSheet",
  "CssRuleList",
  "CssStyleSheet",
  "HtmlStyleElement",
  "MediaQueryList",
]


